[gd_scene load_steps=6 format=3 uid="uid://d1ga81q12atc"]

[ext_resource type="Script" uid="uid://dlcrd4eaa65s5" path="res://src/level/obstacles/adaptation_obstacle.gd" id="1_mvvav"]
[ext_resource type="AudioStream" uid="uid://b8p4s3pe45n1w" path="res://sounds/stab_death.mp3" id="2_e12qc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v3qxo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e12qc"]

[sub_resource type="SpriteFrames" id="SpriteFrames_uatf8"]

[node name="AdaptationObstacle" type="Node2D"]
script = ExtResource("1_mvvav")

[node name="EffectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EffectArea"]
shape = SubResource("RectangleShape2D_v3qxo")

[node name="EffectStaticbody" type="StaticBody2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EffectStaticbody"]
shape = SubResource("RectangleShape2D_e12qc")

[node name="Main_Texture" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -128)
sprite_frames = SubResource("SpriteFrames_uatf8")

[node name="Secondary_Texture" type="Sprite2D" parent="."]
position = Vector2(0, -128)

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_e12qc")

[connection signal="body_entered" from="EffectArea" to="." method="_on_effect_area_body_entered"]
[connection signal="body_exited" from="EffectArea" to="." method="_on_effect_area_body_exited"]
